# grade_dashboard

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MANUAL.md  SPEC.md  grade-tui  grader  grader.py  grader.py.bak  repclasslist.xls  requirements.txt  test_formula_header.xlsx  theme.json.example
.agents/: AGENTS.md
2026_S1_Cosmology/: config.yaml
2026_S1_Cosmology/data/: exams.csv  reports.csv
2026_S1_Cosmology/reports/: final_grades.csv
2026_S1_PHYS1120_SEC_51_grading/course_info/: 2026_S1_PHYS1120_SEC_51_config.yaml  2026_S1_PHYS1120_SEC_51_student_info.csv
2026_S1_PHYS1120_SEC_51_grading/data/: 2026_S1_PHYS1120_attendance.csv  2026_S1_PHYS1120_attendance.xlsx  final.csv  homework.csv  midterm.csv
course_info_prep/: convert_student_info.py  excel_cleaner.py
course_info_prep/.agents/skills/excel-prep/: SKILL.md
courses/2026_S1_Cosmology/data/: homeworks.csv  quizzes.csv
courses/2026_S1_Cosmology/reports/: copy_friendly_scores.csv  final_grades.csv
courses/2026_S2_GR2/: config.yaml
rust_tui/: Cargo.toml
rust_tui/src/: app.rs  bridge.rs  main.rs  style.rs  types.rs  ui.rs
src/: calculators.py  dashboard.py  dashboard.py.bak  data_loader.py  tui_api.py
tmp_test_dir/: grader
tui/: go.mod  main.go  render_test.go  scratch_run.go  scratch_test.go
