[package]
name = "rust_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = { version = "0.4.0", default-features = false, features = ["ratatui", "crossterm"] }
unicode-width = "0.1.13"

